--- a/app/assets/stylesheets/groundworkcss/_settings.scss
+++ b/app/assets/stylesheets/groundworkcss/_settings.scss
@@ -173,7 +173,7 @@
 // $container-width:           1200px;
 // $gutter:                    10px;
 // $responsive:                true;
-
+// $inline-conditional-helpers: false;
 
 // =============================================
 //                  Breakpoints
