--- a/app/assets/stylesheets/groundworkcss/responsive/_desktop.scss
+++ b/app/assets/stylesheets/groundworkcss/responsive/_desktop.scss
@@ -7,13 +7,21 @@ $responsive: true !default;
 $navigation-classes: true !default;
 $multi-column-classes:      true !default;
 $multi-column-names:        "one-column" "two-column" "three-column" "four-column" "five-column" !default;
+$inline-conditional-helpers: false !default;
 
 
 @mixin desktop {
   @if $responsive {
     @media #{$desktop} {
       // conditional helpers
+      .desktop-only { display: block !important; }
+      .ipad-only { display: none !important; }
+      .small-tablet-only { display: none !important; }
+      .mobile-only { display: none !important; }
       .hide-on-desktop { display: none !important; }
+      @if $inline-conditional-helpers {
+        span.desktop-only { display: inline !important; }
+      }
       // spacer overrides
       .zero-desktop { @include helper_reset(); }
       .no-padding-desktop, .no-pad-desktop { @include helper_reset(padding, $spacers: padded pad-top pad-right pad-bottom pad-left); }
