--- a/app/assets/stylesheets/groundworkcss/responsive/_ipad.scss
+++ b/app/assets/stylesheets/groundworkcss/responsive/_ipad.scss
@@ -7,16 +7,21 @@ $responsive: true !default;
 $navigation-classes: true !default;
 $multi-column-classes:      true !default;
 $multi-column-names:        "one-column" "two-column" "three-column" "four-column" "five-column" !default;
+$inline-conditional-helpers: false !default;
 
 
 @mixin ipad {
   @if $responsive {
     @media #{$ipad} {
       // conditional helpers
-      .ipad-only { display: block !important; }
-      span.ipad-only { display: inline !important; }
-      .hide-on-ipad { display: none !important; }
       .desktop-only { display: none !important; }
+      .ipad-only { display: block !important; }
+      .small-tablet-only { display: none !important; }
+      .mobile-only { display: none !important; }
+      .hide-on-ipad { display: none !important; }
+      @if $inline-conditional-helpers {
+        span.ipad-only { display: inline !important; }
+      }
       // spacer overrides
       .zero-ipad { @include helper_reset(); }
       .no-padding-ipad, .no-pad-ipad { @include helper_reset(padding, $spacers: padded pad-top pad-right pad-bottom pad-left); }
