--- a/app/assets/stylesheets/groundworkcss/responsive/_small-tablet.scss
+++ b/app/assets/stylesheets/groundworkcss/responsive/_small-tablet.scss
@@ -7,6 +7,7 @@ $responsive: true !default;
 $navigation-classes: true !default;
 $multi-column-classes:      true !default;
 $multi-column-names:        "one-column" "two-column" "three-column" "four-column" "five-column" !default;
+$inline-conditional-helpers: false !default;
 
 
 @mixin small-tablet {
@@ -15,10 +16,14 @@ $multi-column-names:        "one-column" "two-column" "three-column" "four-colum
       // responsive grid
       @include grid-responsive();
       // conditional helpers
-      .small-tablet-only { display: block !important; }
-      span.small-tablet-only { display: inline !important; }
-      .hide-on-small-tablet { display: none !important; }
       .desktop-only { display: none !important; }
+      .ipad-only { display: none !important; }
+      .small-tablet-only { display: block !important; }
+      .mobile-only { display: none !important; }
+      .hide-on-small-tablet { display: none !important; }
+      @if $inline-conditional-helpers {
+        span.small-tablet-only { display: inline !important; }
+      }
       // spacer overrides
       .zero-small-tablet { @include helper_reset(); }
       .no-padding-small-tablet, .no-pad-small-tablet { @include helper_reset(padding, $spacers: padded pad-top pad-right pad-bottom pad-left); }
