--- a/app/assets/stylesheets/groundworkcss/base/_grid.scss
+++ b/app/assets/stylesheets/groundworkcss/base/_grid.scss
@@ -12,7 +12,6 @@ $denominators-plural:     "wholes" "halves" "thirds" "fourths" "fifths" "sixths"
 $grid-classes:            true !default;
 $grid-adapter-classes:    true !default;
 $grid-adapters:           $one-whole $one-half $one-third $one-fourth $one-fifth !default;
-$grid-adapters-clearfix:  15 !default;
 $container-width:         1200px !default;
 $gutter:                  10px !default;
 $responsive:              true !default;
@@ -89,30 +88,22 @@ $selectors: if($grid-classes, "%" ".", "%");
 }
 
 @if $grid-adapter-classes {
-  @media #{$tablet} {
-    // grid adapters
-    @for $i from 1 through length($grid-adapters) {
-      .#{nth($numerators, ($i))}-up {
-        width: nth($grid-adapters, $i) !important;
-        clear: none !important;
-        float: left !important;
-        left: 0 !important;
-        right: 0 !important;
-      }
+  @for $i from 1 through length($grid-adapters) {
+    .#{nth($numerators, $i)}-up,
+    .#{nth($numerators, $i)}-up-desktop {
+      width: nth($grid-adapters, $i) !important;
+      clear: none !important;
+      float: left !important;
+      left: 0 !important;
+      right: 0 !important;
     }
-    // grid adapters nth clearfix
-    @for $i from 1 through length($grid-adapters) {
-      $nth-clears: "";
-      @for $j from 1 through $grid-adapters-clearfix {
-        $nth-clears: $nth-clears + "&:nth-child(#{($i * $j) + 1})";
-        @if $j < $grid-adapters-clearfix {
-          $nth-clears: $nth-clears + ", ";
-        }
-      }
-      .#{nth($numerators, ($i))}-up {
-        #{$nth-clears} {
-          clear: both !important;
-        }
+  }
+  // grid adapters nth clearfix
+  @for $i from 1 through length($grid-adapters) {
+    .#{nth($numerators, $i)}-up,
+    .#{nth($numerators, $i)}-up-desktop {
+      &:nth-child(#{$i}n+1) {
+        clear: both !important;
       }
     }
   }
@@ -122,7 +113,7 @@ $selectors: if($grid-classes, "%" ".", "%");
   // ipad grid adapters
   @media #{$ipad} {
     @for $i from 1 through length($grid-adapters) {
-      .#{nth($numerators, ($i))}-up-ipad {
+      .#{nth($numerators, $i)}-up-ipad {
         width: nth($grid-adapters, $i) !important;
         clear: none !important;
         float: left !important;
@@ -134,15 +125,8 @@ $selectors: if($grid-classes, "%" ".", "%");
   // ipad grid adapters nth clearfix
   @media #{$ipad} and #{$tablet} and #{$not-mobile} {
     @for $i from 1 through length($grid-adapters) {
-      $nth-clears: "";
-      @for $j from 1 through $grid-adapters-clearfix {
-        $nth-clears: $nth-clears + "&:nth-child(#{($i * $j) + 1})";
-        @if $j < $grid-adapters-clearfix {
-          $nth-clears: $nth-clears + ", ";
-        }
-      }
-      .#{nth($numerators, ($i))}-up-ipad {
-        #{$nth-clears} {
+      .#{nth($numerators, $i)}-up-ipad {
+        &:nth-child(#{$i}n+1) {
           clear: both !important;
         }
       }
@@ -151,7 +135,7 @@ $selectors: if($grid-classes, "%" ".", "%");
   // small-tablet grid adapters
   @media #{$small-tablet} and #{$not-mobile} {
     @for $i from 1 through length($grid-adapters) {
-      .#{nth($numerators, ($i))}-up-small-tablet {
+      .#{nth($numerators, $i)}-up-small-tablet {
         width: nth($grid-adapters, $i) !important;
         clear: none !important;
         float: left !important;
@@ -163,15 +147,8 @@ $selectors: if($grid-classes, "%" ".", "%");
   // small-tablet grid adapters nth clearfix
   @media #{$small-tablet} and #{$not-mobile} {
     @for $i from 1 through length($grid-adapters) {
-      $nth-clears: "";
-      @for $j from 1 through $grid-adapters-clearfix {
-        $nth-clears: $nth-clears + "&:nth-child(#{($i * $j) + 1})";
-        @if $j < $grid-adapters-clearfix {
-          $nth-clears: $nth-clears + ", ";
-        }
-      }
-      .#{nth($numerators, ($i))}-up-small-tablet {
-        #{$nth-clears} {
+      .#{nth($numerators, $i)}-up-small-tablet {
+        &:nth-child(#{$i}n+1) {
           clear: both !important;
         }
       }
@@ -180,7 +157,7 @@ $selectors: if($grid-classes, "%" ".", "%");
   // mobile grid adapters
   @media #{$mobile} {
     @for $i from 1 through length($grid-adapters) {
-      .#{nth($numerators, ($i))}-up-mobile {
+      .#{nth($numerators, $i)}-up-mobile {
         width: nth($grid-adapters, $i) !important;
         clear: none !important;
         float: left !important;
@@ -195,15 +172,8 @@ $selectors: if($grid-classes, "%" ".", "%");
   // mobile grid adapters nth clearfix
   @media #{$mobile} {
     @for $i from 1 through length($grid-adapters) {
-      $nth-clears: "";
-      @for $j from 1 through $grid-adapters-clearfix {
-        $nth-clears: $nth-clears + "&:nth-child(#{($i * $j) + 1})";
-        @if $j < $grid-adapters-clearfix {
-          $nth-clears: $nth-clears + ", ";
-        }
-      }
-      .#{nth($numerators, ($i))}-up-mobile {
-        #{$nth-clears} {
+      .#{nth($numerators, $i)}-up-mobile {
+        &:nth-child(#{$i}n+1) {
           clear: both !important;
         }
       }
@@ -216,7 +186,7 @@ $selectors: if($grid-classes, "%" ".", "%");
   $nots: ':not(.mobile)'; // set up mobile nots
   @if $grid-adapter-classes {
     @for $i from 1 through length($grid-adapters) {
-      $nots: $nots + ':not(.' + unquote("#{nth($numerators, ($i))}") + '-up-mobile)';
+      $nots: $nots + ':not(.' + unquote("#{nth($numerators, $i)}") + '-up-mobile)';
     }
   }
   %responsive-grid#{$both} { // reset grid
@@ -239,7 +209,7 @@ $selectors: if($grid-classes, "%" ".", "%");
         $nots: $nots + ':not(.small-tablet)'; // setup tablet $nots
         @if $grid-adapter-classes {
           @for $i from 1 through length($grid-adapters) {
-            $nots: $nots + ':not(.' + unquote("#{nth($numerators, ($i))}") + '-up-small-tablet)';
+            $nots: $nots + ':not(.' + unquote("#{nth($numerators, $i)}") + '-up-small-tablet)';
           }
         }
       }
