--- a/app/assets/stylesheets/groundworkcss/anim/_lightspeed.scss
+++ b/app/assets/stylesheets/groundworkcss/anim/_lightspeed.scss
@@ -3,6 +3,13 @@ $lightspeed-animations: true !default;
 
 @if $lightspeed-animations {
 
+  @keyframes lightSpeedIn {
+    0% { transform: translateX(100%) skewX(-30deg); opacity: 0; }
+    60% { transform: translateX(-20%) skewX(30deg); opacity: 1; }
+    80% { transform: translateX(0%) skewX(-15deg); opacity: 1; }
+    100% { transform: translateX(0%) skewX(0deg); opacity: 1; }
+  }
+
   .lightSpeedIn {
     animation-name: lightSpeedIn;
     animation-timing-function: ease-out;
