Updating README.md: compass-rails is now working with Rails 4.1. (Probably Rails 4.x, although not verified.)
The images path needs a leading slash.

--- a/app/assets/stylesheets/groundworkcss/_settings-rails4.scss
+++ b/app/assets/stylesheets/groundworkcss/_settings-rails4.scss
@@ -10,7 +10,7 @@
 
 // file paths
 $root_path:           "./";
-$images_path:         asset-path("images/");
+$images_path:         asset-path("/images/");
 $fonts_path:          "groundworkcss/";
 $boxsizing_path:      asset-path("groundworkcss/libs/boxsizing.htc");
 $PIE_path:            asset-path("groundworkcss/libs/PIE.htc");
