--- a/app/assets/stylesheets/groundworkcss/icons/font-awesome/_path.scss
+++ b/app/assets/stylesheets/groundworkcss/icons/font-awesome/_path.scss
@@ -3,12 +3,12 @@
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url('#{$FontAwesomePath}fontawesome-webfont.eot?v=#{$FontAwesomeVersion}');
-  src: url('#{$FontAwesomePath}fontawesome-webfont.eot?#iefix&v=#{$FontAwesomeVersion}') format('embedded-opentype'),
-    url('#{$FontAwesomePath}fontawesome-webfont.woff?v=#{$FontAwesomeVersion}') format('woff'),
-    url('#{$FontAwesomePath}fontawesome-webfont.ttf?v=#{$FontAwesomeVersion}') format('truetype'),
-    url('#{$FontAwesomePath}fontawesome-webfont.svg#fontawesomeregular?v=#{$FontAwesomeVersion}') format('svg');
-//  src: url('#{$FontAwesomePath}/FontAwesome.otf') format('opentype'); // used when developing fonts
+  src: url(font-path('groundworkcss/fontawesome-webfont.eot') + '?v=#{$FontAwesomeVersion}'),
+    url(font-path('groundworkcss/fontawesome-webfont.eot') + '?#iefix&v=#{$FontAwesomeVersion}') format('embedded-opentype'),
+    url(font-path('groundworkcss/fontawesome-webfont.woff') + '?v=#{$FontAwesomeVersion}') format('woff'),
+    url(font-path('groundworkcss/fontawesome-webfont.ttf') + '?v=#{$FontAwesomeVersion}') format('truetype'),
+    url(font-path('groundworkcss/fontawesome-webfont.svg') + '#fontawesomeregular?v=#{$FontAwesomeVersion}') format('svg');
+  //src: url(font-path('groundworkcss/FontAwesome.otf') format('opentype'); // used when developing fonts
   font-weight: normal;
   font-style: normal;
 }
